# entropy_quality_drift_benchmark

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude/agents/: cleanup_workspace.md  examine.md  lead-experiment-engineer.md  sdlc-technical-writer.md  test-automator.md
.claude/commands/: benchmark.md  cleanup_workspace.md  commit.md  doc-maintain.md  examine.md  review.md  sync.md  verify.md
.github/workflows/: ci.yml
configs/: kpi_thresholds.json
docs/: databricks_walkthrough.md  generate_visuals.py  technical-approach.md
docs/fixtures/: sample_evidence_seed42.json
runs/: README.md
src/entropy_quality_drift/: __init__.py
src/entropy_quality_drift/baselines/: __init__.py  deequ_adapter.py  evidently_adapter.py
src/entropy_quality_drift/challengers/: __init__.py  entropy_forge.py  entropy_sentinel.py
src/entropy_quality_drift/contracts/: __init__.py
src/entropy_quality_drift/databricks_seams/: __init__.py
src/entropy_quality_drift/datasets/: __init__.py  synthetic.py
src/entropy_quality_drift/evidence/: __init__.py
src/entropy_quality_drift/metrics/: __init__.py  gate_evaluator.py
src/entropy_quality_drift/runners/: __init__.py  benchmark.py
tests/: test_benchmark_integration.py  test_drift_track.py  test_quality_track.py
